--- a/src/main/resources/view.fxml
+++ b/src/main/resources/view.fxml
@@ -6,11 +6,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0"
-      xmlns="http://javafx.com/javafx/20.0.1"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.andrew.javafx_uni.Controller">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.andrew.javafx_uni.Controller">
   <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="640.0" VBox.vgrow="ALWAYS">
-    <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="96.0" AnchorPane.leftAnchor="0.0">
+    <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="148.0" AnchorPane.leftAnchor="0.0">
       <Menu mnemonicParsing="false" text="OS">
         <MenuItem fx:id="infoOS" mnemonicParsing="false" text="OS info" />
       </Menu>
@@ -19,6 +17,9 @@
           <MenuItem fx:id="infoCPU" mnemonicParsing="false" text="Information" />
           <MenuItem fx:id="loadCPU" mnemonicParsing="false" text="CPU Loading" />
         </Menu>
+      </Menu>
+      <Menu mnemonicParsing="false" text="RAM">
+        <MenuItem fx:id="loadRAM" mnemonicParsing="false" text="RAM Load" />
       </Menu>
     </MenuBar>
   </AnchorPane>
